[gd_scene load_steps=7 format=2]

[ext_resource path="res://menu/main_menu.gd" type="Script" id=1]
[ext_resource path="res://menu/pixel-1-24.tres" type="DynamicFont" id=2]
[ext_resource path="res://menu/buttons/play_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://menu/TileMapBackground.tscn" type="PackedScene" id=4]
[ext_resource path="res://menu/transitions/FadeIn.tscn" type="PackedScene" id=5]
[ext_resource path="res://menu/transitions/FadeOut.tscn" type="PackedScene" id=6]

[node name="main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="menu" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 30.0
margin_right = -50.0
margin_bottom = -20.0

[node name="label_title" type="Label" parent="menu"]
margin_right = 284.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "SENTERIN"
align = 1
valign = 1

[node name="center_row" type="HBoxContainer" parent="menu"]
margin_top = 35.0
margin_right = 284.0
margin_bottom = 166.0
size_flags_vertical = 3
alignment = 1

[node name="buttons" type="VBoxContainer" parent="menu/center_row"]
margin_right = 284.0
margin_bottom = 131.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="button_play" parent="menu/center_row/buttons" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 55.0
margin_right = 284.0
margin_bottom = 75.0
scene_to_load = "res://level_1/level_1_1.tscn"

[node name="TileMap" parent="." instance=ExtResource( 4 )]

[node name="FadeIn" parent="." instance=ExtResource( 5 )]
visible = false

[node name="FadeOut" parent="." instance=ExtResource( 6 )]
visible = false
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
[connection signal="fade_finished" from="FadeOut" to="." method="_on_FadeOut_fade_finished"]
